Use Integer.valueOf and Long.valueOf
This fixes some deprecation warnings in newer versions of Java.